--- a/P000472.opf/meta.yml
+++ b/P000472.opf/meta.yml
@@ -1,15 +1,16 @@
-id: opecha:P000472
+id: P000472
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG11691
   title: ཤེས་རབ་བློ་ལྡན་གྱི་རྣམ་ཐར་དང་མགུར་འབུམ།
-  volume:
+  author: ''
+  volumes:
     55a9595b74104f1c93405b2a97d856d3:
       image_group_id: I1KG11693
       title: Volume 1 of shes rab blo ldan gyi rnam thar dang mgur 'bum/
       volume_number: 1
       total_pages: 262
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: ཤེས་རབ་བློ་ལྡན་གྱི་རྣམ་ཐར་དང་མགུར་འབུམ།
   author: ''
