--- a/P000472.opf/layers/v001/Pagination.yml
+++ b/P000472.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: faf8ea51dc7048f986c89fca8fde97ac
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   bad6ab6443804752b469e5775be08c4d:
