--- a/P000472.opf/meta.yml
+++ b/P000472.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000472
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG11691
   title: ཤེས་རབ་བློ་ལྡན་གྱི་རྣམ་ཐར་དང་མགུར་འབུམ།
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 262
       base_file: v001.txt
-ebook_metadata:
-  title: ཤེས་རབ་བློ་ལྡན་གྱི་རྣམ་ཐར་དང་མགུར་འབུམ།
-  author: ''
-  sku: P000472
-  cover: cover.jpg
-  layers:
-  - pagination
